syntax = "proto3";

package netsensor;

import "google/protobuf/timestamp.proto";
import "traffic.proto";
import "topology.proto";
import "netproxyinfo.proto";
import "datatype.proto";
import "icmpinfo.proto";

option go_package = "netsensor";
option java_package = "us.ihmc.nodemon.sensors.netsensor";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "NetSensorContainerProto";

message NetSensorContainer {
    DataType dataType = 1; //the data type of this message (TRAFFIC or TOPOLOGY or NETPROXY or ICMP)
    repeated TrafficByInterface trafficByInterfaces = 2; //Traffic Information
    repeated Topology topologies = 3; //Topology Information
    NetProxyInfo netProxyInfo = 4; //NetProxy Information
	ICMPPacketsByInterface icmpPacketsByInterface = 5;    // ICMP information
    google.protobuf.Timestamp timestamp = 6; //Time this object was created
}
