syntax = "proto3";

package netsensor;

option go_package = "netsensor";
option java_package = "us.ihmc.ddam.sensors.netsensor";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "TopologyProto";

message Topology
{
	NetworkInfo networkInfo	= 1; //Network ID
    repeated Host internals	= 2; //Array of local hosts
    repeated Host localGws	= 3; //Array of local gws
}

message Host 
{
    uint32 ip	= 1; //IP address of the host
    string mac	= 2; //MAC address of the host - for now not populated
}

message NetworkInfo
{
	string networkName 	  = 1; //Subnetwork address 
	string networkNetmask = 2; //Subnetwork netmask
	uint32 interfaceIp	  = 3; //This is the IP of sensor, it is present only when populated by NetProxy to save space
}