syntax = "proto3";

package traffic;

option go_package = "traffic";
option java_package = "us.ihmc.ddam.nodemon";
option java_generate_equals_and_hash = true;
option java_outer_classname = "Traffic";

// all keys are lowercase, words separated by _
enum Str {
    sensor_ip = 0; //the ip of the sensor
    src_ip = 1; // Ip of the source of this traffic
    dest_ip = 2; // Ip of the destination of this traffic
    protocol = 3; // Protocol of this traffic
    src_port = 4; // Source port of this traffic
    dest_port = 5; // Destination port of this traffic
}

// all values are expressed in bytes
enum Int {
    sent = 0; // value that expresses the quantity of traffic sent (or pass through) the node
    received = 1; // value that expresses the quantity of traffic received (or pass through) the node
    observed = 2; // value that expresses the quantity of traffic observed by the node
    resolution = 3; // the resolution (in seconds) of traffic field values
}